fix background shift

--- a/src/pages/main-page/components/assets/our-projects.module.scss
+++ b/src/pages/main-page/components/assets/our-projects.module.scss
@@ -8,7 +8,7 @@
   width: 100%;
   align-items: flex-start;
   justify-content: center;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url('../../../../assets/images/backgrounds/secondaryBackground.jpeg') center no-repeat;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url('../../../../assets/images/backgrounds/secondaryBackground.jpeg') top no-repeat;
   background-size: cover;
 
   @include breakpoint-lg {
